Fixed some stuff.